--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
     "description": "An object-oriented multi process manager for PHP",
     "type": "project",
     "homepage": "https://www.laracms.cn/",
-    "minimum-stability": "stable",
     "license": "MIT",
     "authors": [
         {
@@ -15,16 +14,28 @@
         "php": "^7.1.3"
     },
     "autoload": {
+        "classmap": [
+
+        ],
         "psr-4": {
-            "Console\\": "/src/",
-            "App\\": "/app/"
-        }
+            "App\\": "./app",
+            "Console\\": "./src"
+        },
+        "files" : [
+        ]
     },
     "scripts": {
         "post-root-project-cmd": [
             "cp .env.example .env"
         ]
     },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "repositories": {
         "packagist": {
             "type": "composer",
