修改管道目录

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 [config]
-app_name = phpconsole
-env = develop
-timezone = Asia/Shanghai
-pipe_dir = storage/tmp/
-tmp_dir = storage/tmp/
+appName = "phpconsole"
+env = "develop"
+timezone = "Asia/Shanghai"
+tmpDir = "storage/tmp/"
+pipeDir = "storage/tmp/"
+
