--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
             "Console\\": "./src"
         },
         "files" : [
+            "./app/helpers.php"
         ]
     },
     "scripts": {
